<resources>
    <string name="app_name">androidloginhttp</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="logout">Logout</string>
    <string name="logioninfo">Enter User Credential</string>
    <string name="ccycnv">Currency Convert</string>
    <string name="wburl">http://192.168.1.114:8090/topics</string>
    <string name="lgnurl">http://192.168.1.114:8080/loginservlet/login</string>

</resources>
