<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Welcome">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="40dip" />

    <Button
        android:id="@+id/btnCcyCnv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dip"
        android:background="@null"
        android:text="@string/ccycnv"
        android:textColor="#21dbd4"
        android:textSize="20dip"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dip"
        android:background="@null"
        android:text="@string/logout"
        android:textColor="#21dbd4"
        android:textSize="20dip"
        android:textStyle="bold" />

</LinearLayout>